add note and reference to otel project

--- a/kubernetes-manifests/currencyservice.yaml
+++ b/kubernetes-manifests/currencyservice.yaml
@@ -34,6 +34,7 @@ spec:
       #   runAsGroup: 1000
       #   runAsNonRoot: true
       #   runAsUser: 1000
+      # Older project doesn't have this problem: https://github.com/svg-sl/opentelemetry-microservices-demo/blob/sl-node-backend/kubernetes-manifests/currencyservice.yaml
       containers:
       - name: server
         # securityContext:
