add emptyDir for adservice /tmp

--- a/kubernetes-manifests/adservice.yaml
+++ b/kubernetes-manifests/adservice.yaml
@@ -44,6 +44,9 @@ spec:
           privileged: false
           readOnlyRootFilesystem: true
         image: adservice
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp-volume
         ports:
         - containerPort: 9555
         env:
@@ -66,6 +69,10 @@ spec:
           periodSeconds: 15
           grpc:
             port: 9555
+      volumes:
+      - name: tmp-volume
+        emptyDir:
+          sizeLimit: 500Mi
 ---
 apiVersion: v1
 kind: Service
